# Marinara-Engine

./: .coderabbit.yaml  .gitignore  .graphifyignore  .puppeteerrc.cjs  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GRAPHIFY.md  PROFESSOR_MARI_BRANCH_DIFF.md  README.md  deny.toml  inline-comments.json  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  review.json  review.md  vite.config.ts
.github/: pull_request_template.md
.github/agents/: chai-workflow.md
.github/bunny-review/: bunny_review.py  requirements.txt  reviewer-prompt.md  rules.json
.github/workflows/: bunny-review-auto.yml  bunny-review-command.yml  bunny-review.yml  ci.yml
android/app/: build.gradle
docs/: CONFIGURATION.md  EXTENSIONS.md  FRONTEND.md  MACROS.md  REFACTOR_PARITY_PIPELINE.md  character-schedule-editor-mobile-plan.md  schedule-edit-modal-plan.md  token-budget-estimates.md
docs/developer/: run-build.html
docs/evidence/pr-1260-magic-rewrite/: provider-request.json
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/cache/: stat-index.json
scratch/: bugfix-verification.json  issue-2139-map-position-repro.ts  issue-2139-vitest-after.json  issue-2139-vitest.config.ts  repro-2063-admin-secret-key.mjs  repro-2063-output.txt
scripts/: check-discovery-metadata.mjs  check-docs.mjs  check-scratch-clean.mjs
skills/: marinara-secrets-detection.md
skills/marinara-agent-workflow/: SKILL.md
skills/marinara-agent-workflow/references/: marinara-overrides.md  proof-templates.md  source-map.md
skills/marinara-bugfix-discipline/references/: impact-brief-template.md
skills/marinara-legacy-parity-audit/: SKILL.md
skills/marinara-legacy-parity-audit/agents/: openai.yaml
skills/marinara-legacy-parity-audit/references/: audit-checklists.md  classification-guide.md  report-template.md
src-tauri/: .gitignore  Cargo.toml  build.rs
src-tauri/crates/assets/: Cargo.toml
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/integrations/: Cargo.toml
src-tauri/crates/llm/: Cargo.toml
src-tauri/crates/llm/src/: lib.rs
src-tauri/crates/security/: Cargo.toml
src-tauri/crates/storage/: Cargo.toml
src-tauri/crates/storage/src/: lib.rs
src-tauri/resources/default-data/game-assets/: CREDITS.md  manifest.json
src-tauri/src/: http_dispatch.rs  http_server.rs  lib.rs  state.rs
src-tauri/src/commands/: storage.rs
src-tauri/src/commands/storage/: admin.rs  agents.rs  avatars.rs  backup.rs  bot_browser.rs  characters.rs  chats.rs  connection_secrets.rs  contracts.rs  custom_tools.rs  exports.rs  fonts.rs  game_state_snapshots.rs  generation.rs  images.rs  imports.rs  integrations.rs  llm.rs  managed_thumbnails.rs  mari.rs  mari_fs.rs  media_uploads.rs  message_swipes.rs  personas.rs  profile.rs  prompts.rs  shared.rs  sprites.rs  translation.rs
src-tauri/src/commands/storage/commands/: assets.rs  backup.rs  entities.rs  integrations.rs  media.rs
src-tauri/src/commands/storage/images/: providers.rs
src-tauri/src/commands/storage/imports/: access.rs  bulk_imports.rs  marinara.rs  marinara_assets.rs  marinara_rollback.rs  marinara_tests.rs  payloads.rs  service.rs  service_tests.rs  st_preset.rs
src-tauri/src/commands/storage/integrations/: discord.rs  haptic.rs  spotify.rs  tts.rs
src-tauri/src/commands/storage/profile/: assets.rs  legacy.rs  zip_import.rs
src/app/: App.tsx  GlobalErrorBoundary.test.tsx  GlobalErrorBoundary.tsx  main.tsx
src/app/shell/: AppShell.tsx  ChatSidebar.tsx  MobileTabBar.tsx  PanelNavButtons.tsx  RightPanel.tsx  TopBar.tsx  WindowTitleBar.tsx  useStartNewChat.ts
src/app/startup/: range-slider-sync.test.ts  range-slider-sync.ts
src/styles/: globals.css
tests/: user-message-regeneration-instruction.test.ts
tests/unit/: agent-memory-runtime.spec.ts  generation-replay.spec.ts
win/installer/: install.bat  installer.nsi
(+468 files in other folders)
