[package]
name = "marinara-assets"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
marinara-core = { path = "../core" }
marinara-security = { path = "../security" }
serde_json = "1"
